Bug 694306 - Keywords should not be permitted in destructuring shorthand. r=Waldo.