js/src/tests/js1_8_5/regress/regress-694306.js
@@ -1,0 +1,21 @@
+// Any copyright is dedicated to the Public Domain.
+// http://creativecommons.org/licenses/publicdomain/
+
+var x;
+try {
+    eval("var {if} = {'if': 1};");
+} catch (exc) {
+    x = exc;
+}
+assertEq(x instanceof SyntaxError, true);
+assertEq("if" in this, false);
+
+x = undefined;
+try {
+    Function("var {if} = {'if': 1};");
+} catch (exc) {
+    x = exc;
+}
+assertEq(x instanceof SyntaxError, true);
+
+reportCompare(0, 0, 'ok');
